# HireVize

./: .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  application.py  base.py  interview.py  job.py  resume.py  tailored_resume.py  team.py  user.py
backend/app/routers/: _helpers.py  applications.py  auth.py  dashboard.py  extension.py  interviews.py  jobs.py  profile.py  resumes.py  tailoring.py  team_invites.py  teams.py
backend/app/schemas/: application.py  auth.py  dashboard.py  interview.py  job.py  resume.py  tailored_resume.py  team.py  user.py
backend/app/services/: ai_tailoring.py  application_manager.py  auto_applier.py  form_filler.py  job_scraper.py  resume_parser.py
backend/app/utils/: file_storage.py  text_extraction.py
backend/app/workers/: playwright_pool.py  tasks.py  worker.py
backend/automation/: base_adapter.py
backend/automation/adapters/: generic.py  greenhouse.py  lever.py  linkedin.py  workday.py
backend/automation/utils/: captcha.py  cookies.py  selectors.py
backend/migrations/versions/: 15dd90287f88_add_teams_and_invites.py  75c1d1a7a0d3_add_interviews_table.py  99c04789fddc_add_work_authorization_to_users.py  a1b2c3d4e5f6_add_application_profile_fields.py  b2c3d4e5f6a7_drop_resume_parsing_columns.py  c3d4e5f6a7b8_remove_tailoring.py  d4e5f6a7b8c9_add_password_hash.py  feceeec7cb5a_initial_schema.py
backend/tests/: conftest.py
backend/tests/test_automation/: test_adapters.py
(+103 files in other folders)
