[project]
name = "upply-backend"
version = "0.1.0"
description = "Upply - Automated Job Application Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "arq>=0.26.0",
    "playwright>=1.41.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "weasyprint>=62.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
